#104: Fixed vertical alignment of search box.

--- a/src/styles/modules/_body.scss
+++ b/src/styles/modules/_body.scss
@@ -160,7 +160,7 @@ body {
   .sk-reset-filters {
     color: #ffffff !important;
     display: inline-block;
-    margin: 30px 5px 0;
+    margin: 37px 5px 0;
     padding: 6px 10px;
     flex-grow: 0;
     font-size: 14px;
