--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -87,7 +87,7 @@ header {
     color: $light_grey;
     height: 45px;
     max-width: 600px;
-    margin: 63px 0 0 auto;
+    margin: 56px 0 0 auto;
     z-index: 1;
 
     &.is-focused {
